# Telegram_Contest

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp
cmake/: setflags.cmake
dictionaries/: dns_dict.txt  eng_dict.txt  ger_dict.txt  grk_dict.txt  hng_dict.txt  lit_dict.txt  ltn_dict.txt  lux_dict.txt  mls_dict.txt  por_dict.txt  rum_dict.txt  ukr_dict.txt
includes/: html.hpp  main.h  parser.hpp
news_classifier/: CMakeLists.txt
parser/: CMakeLists.txt
parser/includes/: html.hpp  parser.h
parser/sources/: html.cxx  main.cxx  parser.cxx
sources/: main.cxx  parser.cxx
sources/parser/: document.h  info.txt  tag_detector.h  util.h
src/: main.cpp  print_map.cpp
